Fixed overflow-x

--- a/css/result-new.css
+++ b/css/result-new.css
@@ -22,7 +22,7 @@
     height: var(--poster-frame-height);
 
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
 
